--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,74 @@
-*{
-  margin:0px;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.75rem 2rem;
+  background: var(--offWhite);
+  z-index: 1;
+}
+.nav__header {
+  display: flex;
+  justify-content: space-between;
+}
+.nav__btn {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+.nav__icon {
+  font-size: 1.5rem;
+  color: var(--primaryColor);
+}
+.nav__links {
+  height: 0;
+  overflow: hidden;
+  transition: var(--mainTransition);
+  list-style-type: none;
+}
+.nav__links a {
+  display: block;
+  text-decoration: none;
+  padding: 1rem 0;
+  color: var(--mainBlack);
+  transition: var(--mainTransition);
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: var(--mainSpacing);
+}
+.nav__links a:hover {
+  color: var(--primaryColor);
+}
+
+.show__nav {
+  height: 100px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__btn {
+    display: none;
+  }
+  .nav__center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+  }
+  .nav__links {
+    height: auto;
+    display: flex;
+    margin-left: 4rem;
+  }
+  .nav__links a {
+    margin: 0 1rem;
+    padding: 0.5rem 0;
+  }
 }
